--- a/client/src/index.css
+++ b/client/src/index.css
@@ -147,4 +147,22 @@
     border-radius: var(--radius) !important;
     caret-color: var(--foreground) !important;
   }
+
+  /* CSS for scrollbar */
+  .custom-scrollbar::-webkit-scrollbar {
+    width: 4px;
+  }
+
+  .custom-scrollbar::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  .custom-scrollbar::-webkit-scrollbar-thumb {
+    background-color: var(--sidebar-accent);
+    border-radius: var(--radius);
+  }
+
+  .custom-scrollbar::-webkit-scrollbar-thumb:hover {
+    background-color: var(--sidebar-primary);
+  }
 }
